[gd_scene load_steps=49 format=3 uid="uid://vuhgqoa33hek"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ngufq"]
[ext_resource type="Texture2D" uid="uid://dlg3uvgto5fs6" path="res://Images/SpriteSheets/knight.png" id="2_t6xk0"]
[ext_resource type="AudioStream" uid="uid://bdisbdpeb1pm2" path="res://Audio/SFX/Jump.ogg" id="3_kjx37"]
[ext_resource type="AudioStream" uid="uid://chukmwvd57a2o" path="res://Audio/SFX/dash.ogg" id="4_hj6l1"]
[ext_resource type="Texture2D" uid="uid://clfbfqv4whn4y" path="res://Images/Sprites/dotdotdot.png" id="5_4gy8g"]
[ext_resource type="AudioStream" uid="uid://clghrii4slno5" path="res://Audio/SFX/Damage.ogg" id="5_nip4h"]
[ext_resource type="Texture2D" uid="uid://lk68a00enuc0" path="res://Images/Sprites/exclamation.png" id="6_qsuow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w74l3"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mefm5"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv3ig"]
atlas = ExtResource("2_t6xk0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kviue"]
atlas = ExtResource("2_t6xk0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdgbm"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rkdo"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72p6v"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw0ni"]
atlas = ExtResource("2_t6xk0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx2ii"]
atlas = ExtResource("2_t6xk0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ef2"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i01lo"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8r5f"]
atlas = ExtResource("2_t6xk0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkhk5"]
atlas = ExtResource("2_t6xk0")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxi3a"]
atlas = ExtResource("2_t6xk0")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6qd8"]
atlas = ExtResource("2_t6xk0")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxwro"]
atlas = ExtResource("2_t6xk0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lvq4"]
atlas = ExtResource("2_t6xk0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw8pi"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpvja"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i8u7"]
atlas = ExtResource("2_t6xk0")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hnk6"]
atlas = ExtResource("2_t6xk0")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m34r"]
atlas = ExtResource("2_t6xk0")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w481i"]
atlas = ExtResource("2_t6xk0")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cugah"]
atlas = ExtResource("2_t6xk0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ekh"]
atlas = ExtResource("2_t6xk0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc2bs"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyx48"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaxug"]
atlas = ExtResource("2_t6xk0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tibql"]
atlas = ExtResource("2_t6xk0")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxd3d"]
atlas = ExtResource("2_t6xk0")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pef4b"]
atlas = ExtResource("2_t6xk0")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdb02"]
atlas = ExtResource("2_t6xk0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd64a"]
atlas = ExtResource("2_t6xk0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv3fk"]
atlas = ExtResource("2_t6xk0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cjf3"]
atlas = ExtResource("2_t6xk0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmxs1"]
atlas = ExtResource("2_t6xk0")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02qhr"]
atlas = ExtResource("2_t6xk0")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiy1k"]
atlas = ExtResource("2_t6xk0")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a2i5"]
atlas = ExtResource("2_t6xk0")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jf1js"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w74l3")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mefm5")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv3ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kviue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdgbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rkdo")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72p6v")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw0ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx2ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ef2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i01lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8r5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkhk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxi3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6qd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxwro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lvq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw8pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpvja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i8u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hnk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m34r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w481i")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cugah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ekh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc2bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyx48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaxug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tibql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxd3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pef4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdb02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd64a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv3fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cjf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmxs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02qhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiy1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a2i5")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxymy"]
size = Vector2(11, 15)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_ngufq")

[node name="AnimationSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_jf1js")
animation = &"dead"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_yxymy")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_kjx37")

[node name="DashSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_hj6l1")

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_nip4h")
volume_db = 4.685

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="Dots" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(15, -9)
texture = ExtResource("5_4gy8g")

[node name="Exclamation" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(15, -9)
texture = ExtResource("6_qsuow")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
